# rxing

./: Cargo.toml  README.md  README_zh.md  pyproject.toml
.github/workflows/: CI.yml
examples/: test_lib_decode.py
python/rxing/: __init__.py
src/: lib.rs
tests/: test_rxing.py
