[package]
name = "rxing_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rxing_lib"
crate-type = ["cdylib"]

[dependencies]
rxing = "0.7.1"
pyo3 = "0.24.0"
image = { version = "0.25", optional = true } 

[features]
default = ["image"]
